--- a/static/styles/right_sidebar.css
+++ b/static/styles/right_sidebar.css
@@ -34,7 +34,7 @@
             font-size: 1em;
             display: none;
             text-align: center;
-            padding: 0 6px 0 6px;
+            padding: 0 0.375rem 0 0.375rem;
 
             i {
                 padding-right: 0.25em;
@@ -117,7 +117,7 @@
 
     .count {
         float: right;
-        padding: 0 4px;
+        padding: 0 0.25rem;
         background-color: hsl(105, 2%, 50%);
         color: hsl(0, 0%, 100%);
         font-size: 0.75rem;
