--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -133,13 +133,13 @@ p.n-margin {
     height: 28px;
     font-size: 1rem;
     margin: 0 auto 12px;
-    padding: 5px;
+    padding: 0.3125rem;
     i {
         margin: 0 3px 0 1px;
     }
     p {
         margin: 0;
-        padding: 4px;
+        padding: 0.25rem;
     }
 }
 
@@ -172,7 +172,7 @@ p.n-margin {
     width: 400px;
     top: 0;
     left: calc(50vw - 220px);
-    padding: 15px;
+    padding: 0.9375rem;
 
     background-color: hsl(0, 0%, 98%);
     border-radius: 5px;
@@ -435,7 +435,7 @@ li,
     outline-color: hsl(0, 0%, 73%);
     height: 18px;
     width: 10px;
-    padding: 6px 6px;
+    padding: 0.375rem 0.375rem;
     display: block;
     /* The below two avoids the padded element from displaying
     it's own border and background color */
@@ -524,7 +524,7 @@ strong {
 
     .tooltip-inner {
         background-color: hsla(0, 0%, 7%, 0.8);
-        padding: 3px 5px;
+        padding: 0.1875rem 0.3125rem;
     }
 }
 
@@ -570,7 +570,7 @@ strong {
     li {
         a {
             display: block;
-            padding: 3px 20px;
+            padding: 0.1875rem 1.25rem;
             clear: both;
             font-weight: normal;
             line-height: 20px;
@@ -635,7 +635,7 @@ li.actual-dropdown-menu i {
 }
 
 .settings-dropdown-cog {
-    padding: 6px 12px;
+    padding: 0.375rem 0.75rem;
 }
 
 .message_area_padder {
@@ -730,7 +730,7 @@ td.pointer {
     display: block;
     font-size: 0.75rem;
     opacity: 0.4;
-    padding: 1px;
+    padding: 0.0625rem;
     font-weight: 400;
     position: absolute;
     right: -105px;
@@ -912,7 +912,7 @@ td.pointer {
 
 .stream_label {
     display: inline-block;
-    padding: 4px 6px 3px 6px;
+    padding: 0.25rem 0.375rem 0.1875rem 0.375rem;
     font-weight: normal;
     height: 17px;
     line-height: 17px;
@@ -970,7 +970,7 @@ td.pointer {
 
 .stream_topic {
     display: inline-block;
-    padding: 3px 3px 2px 9px;
+    padding: 0.1875rem 0.1875rem 0.125rem 0.5625rem;
     height: 17px;
     line-height: 17px;
     overflow: hidden;
@@ -985,7 +985,7 @@ td.pointer {
     color: hsl(0, 0%, 53%);
     font-size: 0.75rem;
     font-weight: 600;
-    padding: 3px 11px 2px 10px;
+    padding: 0.1875rem 0.6875rem 0.125rem 0.625rem;
     height: 17px;
     line-height: 17px;
 
@@ -1001,7 +1001,7 @@ td.pointer {
 
 .summary_row {
     .message_header {
-        padding: 5px 0 4px 5px;
+        padding: 0.3125rem 0 0.25rem 0.3125rem;
         border-radius: 0;
     }
 
@@ -1080,7 +1080,7 @@ td.pointer {
     .message_label_clickable {
         background-color: hsl(0, 0%, 27%);
         display: inline-block;
-        padding: 3px 6px 2px 6px;
+        padding: 0.1875rem 0.375rem 0.125rem 0.375rem;
         font-weight: normal;
         font-size: 0.875rem;
         height: 17px;
@@ -1389,7 +1389,7 @@ div.focused_table {
     .alert {
         display: inline-block;
         margin: 0;
-        padding: 0 10px;
+        padding: 0 0.625rem;
         line-height: 17px;
         font-size: 0.875rem;
     }
@@ -1401,7 +1401,7 @@ div.focused_table {
     &.header-v {
         height: 18px;
         display: inline-block;
-        padding: 0 3px;
+        padding: 0 0.1875rem;
         vertical-align: baseline;
 
         line-height: 0px;
@@ -1485,7 +1485,7 @@ div.focused_table {
 }
 
 .messagebox-content {
-    padding: 4px 115px 1px 10px;
+    padding: 0.25rem 7.1875rem 0.0625rem 0.625rem;
 }
 
 .bookend {
@@ -1575,10 +1575,10 @@ div.focused_table {
         font-size: 1rem;
         line-height: 16px;
         margin: 0 -4px 0 0;
-        padding: 12px 6px;
+        padding: 0.75rem 0.375rem;
 
         @media (max-width: 500px) {
-            padding: 7px 3.5px; /* based on having ~41.66% decrease */
+            padding: 0.4375rem 3.0.3125rem; /* based on having ~41.66% decrease */
         }
         i {
             margin-right: 3px;
@@ -1662,16 +1662,16 @@ div.focused_table {
         overflow: hidden;
         white-space: nowrap;
         margin: 0;
-        padding: 12px 0;
+        padding: 0.75rem 0;
         padding-left: 10px;
 
         @media (max-width: 500px) {
-            padding: 7px 0;
+            padding: 0.4375rem 0;
             padding-left: 10px;
         }
 
         & > a {
-            padding: 12px 0;
+            padding: 0.75rem 0;
         }
     }
 
@@ -1681,9 +1681,9 @@ div.focused_table {
         cursor: pointer;
         font-size: 1.25rem;
 
-        padding: 10px 15px 0 0;
+        padding: 0.625rem 0.9375rem 0 0;
         @media (max-width: 500px) {
-            padding: 5px 15px 0 0;
+            padding: 0.3125rem 0.9375rem 0 0;
         }
     }
 
@@ -1782,7 +1782,7 @@ div.focused_table {
         border: none;
         height: 30px;
         text-align: center;
-        padding: 4px;
+        padding: 0.25rem;
         color: hsl(0, 0%, 80%);
         font-size: 1.125rem;
         box-shadow: none;
@@ -1803,7 +1803,7 @@ div.focused_table {
         height: 100%;
         color: hsl(0, 0%, 80%);
         text-decoration: none;
-        padding: 0 10px;
+        padding: 0 0.625rem;
         font-size: 1.25rem;
         z-index: 5;
         left: 0;
@@ -1831,7 +1831,7 @@ div.focused_table {
 
     @media (min-width: 500px) {
         .pill {
-            padding: 2px 0 2px 0 !important;
+            padding: 0.125rem 0 0.125rem 0 !important;
             font-size: 0.875rem;
         }
     }
@@ -1949,7 +1949,7 @@ div.focused_table {
     border: 1px solid hsl(0, 0%, 93%);
     box-shadow: 0 0 1px hsla(0, 0%, 0%, 0.2);
     border-radius: 12px;
-    padding: 1px 1px 1px 1px;
+    padding: 0.0625rem 0.0625rem 0.0625rem 0.0625rem;
     font-size: 0.5625rem;
     z-index: 15;
     font-weight: normal;
@@ -2199,7 +2199,7 @@ div.topic_edit_spinner {
     width: 18px;
     height: 18px;
     margin-top: -1px;
-    padding: 2px;
+    padding: 0.125rem;
     vertical-align: middle;
 }
 
@@ -2249,7 +2249,7 @@ div.topic_edit_spinner .loading_indicator_spinner {
 
 #invite-user {
     .modal-header {
-        padding: 7px 15px;
+        padding: 0.4375rem 0.9375rem;
         border-color: hsl(0, 0%, 87%);
 
         .exit {
@@ -2406,7 +2406,7 @@ div.topic_edit_spinner .loading_indicator_spinner {
 .sub-unsub-message span,
 .date_row span {
     display: block;
-    padding: 4px;
+    padding: 0.25rem;
     overflow: hidden;
     text-transform: uppercase;
     font-size: 0.8em;
@@ -2567,7 +2567,7 @@ div.topic_edit_spinner .loading_indicator_spinner {
     visibility: hidden;
     opacity: 0;
     position: relative;
-    padding: 5px 8px;
+    padding: 0.3125rem 0.5rem;
     left: -50%;
     top: 10px;
     border-radius: 6px;
